# set-solve

./: README.md  card.py  main.py  pyproject.toml  requirements.txt  segmentation.py
notebooks/: format_labels.ipynb  tmp.ipynb  tmp2.ipynb
scripts/: prepare_dataset.py
src/: __init__.py  card.py  classification.py  classify.py  constants.py  dataloaders.py  net.py  segmentation.py  solve.py  utils.py
tests/: test_segmentation.py  test_solver.py
