[project]
name = "set_solve"
version = "0.1.0"
description = "A small package for set playing"
authors = [
    {name = "Misha Piasecki",email = "michal.piasecki0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.1)",
    "numpy (>=2.2.4)",
    "opencv-contrib-python (>=4.11.0.86)",
    "pandas (>=2.2.3)",
    "pillow (>=11.1.0)",
    "shapely (>=2.0.7)",
    "scikit-image (>=0.25.2)",
    "torch (>=2.6.0)",
    "torchvision (>=0.21.0)"
]


